Fix fix font being too bright on mobile devices (?).

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: rgb(244, 244, 244);
+    color: rgb(68, 68, 68);
 }
 
 footer {
